--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "immutable": "^3.8.1",
     "moment": "^2.15.1",
     "react": "^15.3.2",
+    "react-addons-pure-render-mixin": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
